--- a/plapp/locale/nl/LC_MESSAGES/djangojs.po
+++ b/plapp/locale/nl/LC_MESSAGES/djangojs.po
@@ -2,13 +2,13 @@
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: Pleft\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2011-01-25 21:51+0100\n"
-"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"PO-Revision-Date: 2011-01-25 21:06+0000\n"
 "Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
 "Language-Team: Dutch <>\n"
 "MIME-Version: 1.0\n"
@@ -27,24 +27,23 @@ msgstr "Nieuwe afspraak"
 
 #: .\js\accountbar.js.py:68
 msgid "About Pleft"
-msgstr ""
+msgstr "Over Pleft"
 
 #: .\js\accountbar.js.py:72
 msgid "Write a review"
-msgstr ""
+msgstr "Recensie schrijven"
 
 #: .\js\accountbar.js.py:74
 msgid "Install Pleft in Chrome"
-msgstr ""
+msgstr "Pleft installeren in Chrome"
 
 #: .\js\accountbar.js.py:82
 msgid "Language"
-msgstr ""
+msgstr "Taal"
 
 #: .\js\accountbar.js.py:113
-#, fuzzy
 msgid "the appointment planner"
-msgstr "Nieuwe afspraak"
+msgstr "de afsprakenplanner"
 
 #: .\js\accountbar.js.py:123
 msgid "Loading…"
@@ -76,16 +75,15 @@ msgstr "Tijdstippen:"
 
 #: .\js\caleftar.js.py:327
 msgid "today"
-msgstr ""
+msgstr "nu"
 
 #: .\js\caleftar.js.py:407
 msgid "No times are selected yet."
-msgstr ""
+msgstr "Er zijn nog geen tijdstippen geselecteerd."
 
 #: .\js\caleftar.js.py:524
-#, fuzzy
 msgid "Add a time:"
-msgstr "Datum toevoegen"
+msgstr "Een tijdstip toevoegen:"
 
 #: .\js\form.js.py:47
 msgid "Send invitations"
@@ -148,30 +146,16 @@ msgid "Example appointment overview"
 msgstr "Voorbeeldafsprakenoverzicht"
 
 #: .\js\overview.js.py:136
-msgid ""
-"This appointment could not be found or is not meant to be seen by you. We "
-"apologize for the inconvenience."
-msgstr ""
-"Deze afspraak kon niet worden gevonden of is niet voor u bedoeld. Excuses "
-"voor het ongemak."
+msgid "This appointment could not be found or is not meant to be seen by you. We apologize for the inconvenience."
+msgstr "Deze afspraak kon niet worden gevonden of is niet voor u bedoeld. Excuses voor het ongemak."
 
 #: .\js\overview.js.py:160
-#, fuzzy
-msgid ""
-"Use the buttons to indicate when you’re available. You can also enter "
-"comments."
-msgstr ""
-"Gebruik de knoppen Ja/Mss/Nee om aan te geven wanneer u beschikbaar bent. "
-"(‘Mss’ staat voor ‘misschien’.) U kunt ook commentaar toevoegen."
+msgid "Use the buttons to indicate when you’re available. You can also enter comments."
+msgstr "Gebruik de knoppen om aan te geven wanneer u beschikbaar bent. U kunt ook commentaar invoegen."
 
 #: .\js\overview.js.py:162
-#, fuzzy
-msgid ""
-"View the availability of the other participants by clicking on their names "
-"or on the dates at the left side."
-msgstr ""
-"Bekijk de beschikbaarheid van een andere deelnemer door op zijn of haar naam "
-"te klikken of op de data aan de linkerkant."
+msgid "View the availability of the other participants by clicking on their names or on the dates at the left side."
+msgstr "Bekijk de aanwezigheid van de andere deelnemers door op hun namen te klikken of op de datums aan de linkerkant."
 
 #: .\js\overview.js.py:164
 msgid "Appointment"
@@ -268,12 +252,3 @@ msgstr "Dit lijkt een ongeldige datum te zijn."
 #: .\js\overview.js.py:506
 msgid "This does not seem to be a valid time."
 msgstr "Dit lijkt een ongeldig tijdstip te zijn."
-
-#~ msgid "Yes"
-#~ msgstr "Ja"
-
-#~ msgid "Maybe"
-#~ msgstr "Mss"
-
-#~ msgid "No"
-#~ msgstr "Nee"
