--- a/plapp/locale/ru/LC_MESSAGES/djangojs.po
+++ b/plapp/locale/ru/LC_MESSAGES/djangojs.po
@@ -2,21 +2,20 @@
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: Pleft\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2011-01-25 21:51+0100\n"
-"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"PO-Revision-Date: 2011-01-25 21:06+0000\n"
 "Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
 "Language-Team: Russian <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: .\js\accountbar.js.py:52
 msgid "Sign out"
@@ -43,9 +42,8 @@ msgid "Language"
 msgstr ""
 
 #: .\js\accountbar.js.py:113
-#, fuzzy
 msgid "the appointment planner"
-msgstr "Новая встреча"
+msgstr ""
 
 #: .\js\accountbar.js.py:123
 msgid "Loading…"
@@ -84,9 +82,8 @@ msgid "No times are selected yet."
 msgstr ""
 
 #: .\js\caleftar.js.py:524
-#, fuzzy
 msgid "Add a time:"
-msgstr "Добавить дату"
+msgstr ""
 
 #: .\js\form.js.py:47
 msgid "Send invitations"
@@ -149,30 +146,16 @@ msgid "Example appointment overview"
 msgstr "Пример обзора встречь"
 
 #: .\js\overview.js.py:136
-msgid ""
-"This appointment could not be found or is not meant to be seen by you. We "
-"apologize for the inconvenience."
-msgstr ""
-"Эта встреча не была найдена или вы не имеете права на просмотр. Мы приносим "
-"вам наши извинения."
+msgid "This appointment could not be found or is not meant to be seen by you. We apologize for the inconvenience."
+msgstr "Эта встреча не была найдена или вы не имеете права на просмотр. Мы приносим вам наши извинения."
 
 #: .\js\overview.js.py:160
-#, fuzzy
-msgid ""
-"Use the buttons to indicate when you’re available. You can also enter "
-"comments."
+msgid "Use the buttons to indicate when you’re available. You can also enter comments."
 msgstr ""
-"Используйте Да/??/Нет кнопки чтобы указать вашу доступность. Вы также можете "
-"ввести свой комментарий."
 
 #: .\js\overview.js.py:162
-#, fuzzy
-msgid ""
-"View the availability of the other participants by clicking on their names "
-"or on the dates at the left side."
+msgid "View the availability of the other participants by clicking on their names or on the dates at the left side."
 msgstr ""
-"Смотрите доступность других приглашённых нажимая на их имена или на даты "
-"слева."
 
 #: .\js\overview.js.py:164
 msgid "Appointment"
@@ -269,12 +252,3 @@ msgstr "Кажется это не правильная дата."
 #: .\js\overview.js.py:506
 msgid "This does not seem to be a valid time."
 msgstr "Кажется это не правильная время."
-
-#~ msgid "Yes"
-#~ msgstr "Да"
-
-#~ msgid "Maybe"
-#~ msgstr "??"
-
-#~ msgid "No"
-#~ msgstr "Нет"
