--- a/plauth/locale/ru/LC_MESSAGES/django.po
+++ b/plauth/locale/ru/LC_MESSAGES/django.po
@@ -2,21 +2,20 @@
 # Copyright (C) 2010 Sander Dijkhuis <sander.dijkhuis@gmail.com>
 # This file is distributed under the same license as the Pleft package.
 # Sander Dijkhuis <sander.dijkhuis@gmail.com>, 2010.
-#
+# 
 msgid ""
 msgstr ""
 "Project-Id-Version: Pleft\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: http://code.google.com/p/pleft/issues/list\n"
 "POT-Creation-Date: 2011-01-25 21:51+0100\n"
-"PO-Revision-Date: 2010-12-23 00:25+0000\n"
+"PO-Revision-Date: 2011-01-25 21:06+0000\n"
 "Last-Translator: sander <sander.dijkhuis@gmail.com>\n"
 "Language-Team: Russian <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: .\templates\plauth\not-signed-in.html.py:5
 #: .\templates\plauth\not-signed-in.html.py:10
@@ -24,11 +23,8 @@ msgid "Not signed in"
 msgstr "Вы не вошли"
 
 #: .\templates\plauth\not-signed-in.html.py:14
-msgid ""
-"You are not signed in. Please use the URL that was sent to you by email."
-msgstr ""
-"Вы ещё не вошли. Пожалуйста используйте ссылку котарая вам была послана по "
-"емэйлу."
+msgid "You are not signed in. Please use the URL that was sent to you by email."
+msgstr "Вы ещё не вошли. Пожалуйста используйте ссылку котарая вам была послана по емэйлу."
 
 #: .\templates\plauth\wrong-email-pass.html.py:5
 #: .\templates\plauth\wrong-email-pass.html.py:10
@@ -37,5 +33,4 @@ msgstr "Не удалось войти."
 
 #: .\templates\plauth\wrong-email-pass.html.py:14
 msgid "It seems that the URL you used is wrong or stopped working."
-msgstr ""
-"Кажется ссылка которую вы использовали неправильна, либо она не работает."
+msgstr "Кажется ссылка которую вы использовали неправильна, либо она не работает."
