--- a/README
+++ b/README
@@ -5,6 +5,7 @@ for more details and to get involved.
 System requirements:
 - Django 1.2 or higher
 - a Java runtime environment (for plovr)
+- SQLite2 for Python (for local testing)
 
 Installation:
 1. mkdir external
@@ -12,14 +13,25 @@ Installation:
    http://code.google.com/p/plovr/downloads/list
 3. Symlink external/plovr-[code].jar to external/plovr.jar
 4. Create pleft/local_settings.py, based on one of the examples in that dir.
+   If you just want to test Pleft, use pleft/local_settings.py.debug and
+   modify the paths (especially DATABASE_NAME and MEDIA_ROOT).
+   The SQLite database will be created automatically.
 5. python pleft/manage.py syncdb
-6. python pleft/manage.py compile
-7. If you want to test translations, install gettext and run:
-   python pleft/manage.py mo
 
 Run debug servers:
 python pleft/manage.py runplovr
 python pleft/manage.py runserver
+
+In debug mode, emails are written to the console instead of being sent.
+If you need a link that was provided this way, note that characters like
+the = are escaped. So you might for example need to replace =3D with =.
+
+If you want to test translations, install gettext and run:
+python pleft/manage.py mo
+
+If you want to deploy Pleft, compile the JavaScript files to .cjs using:
+mkdir static/scripts
+python pleft/manage.py compile
 
 Note:
 - If you are using MySQL, make sure that the database is created using:
